// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Can close reaction dialog 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <button
    aria-disabled="false"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="_r_bb_"
    class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53"
    data-kind="primary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="24"
      viewBox="0 0 256 256"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM80,108a12,12,0,1,1,12,12A12,12,0,0,1,80,108Zm96,0a12,12,0,1,1-12-12A12,12,0,0,1,176,108Zm-1.07,48c-10.29,17.79-27.4,28-46.93,28s-36.63-10.2-46.92-28a8,8,0,1,1,13.84-8c7.47,12.91,19.21,20,33.08,20s25.61-7.1,33.07-20a8,8,0,0,1,13.86,8Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Can fully expand emoji picker 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <button
    aria-disabled="false"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="_r_7m_"
    class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53"
    data-kind="primary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="24"
      viewBox="0 0 256 256"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM80,108a12,12,0,1,1,12,12A12,12,0,0,1,80,108Zm96,0a12,12,0,1,1-12-12A12,12,0,0,1,176,108Zm-1.07,48c-10.29,17.79-27.4,28-46.93,28s-36.63-10.2-46.92-28a8,8,0,1,1,13.84-8c7.47,12.91,19.21,20,33.08,20s25.61-7.1,33.07-20a8,8,0,0,1,13.86,8Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Can lower hand 1`] = `
<div>
  <button
    aria-disabled="false"
    aria-expanded="false"
    aria-haspopup="true"
    aria-labelledby="_r_36_"
    class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53"
    data-kind="secondary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="24"
      viewBox="0 0 256 256"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM80,108a12,12,0,1,1,12,12A12,12,0,0,1,80,108Zm96,0a12,12,0,1,1-12-12A12,12,0,0,1,176,108Zm-1.07,48c-10.29,17.79-27.4,28-46.93,28s-36.63-10.2-46.92-28a8,8,0,1,1,13.84-8c7.47,12.91,19.21,20,33.08,20s25.61-7.1,33.07-20a8,8,0,0,1,13.86,8Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Can open menu 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <button
    aria-disabled="false"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="_r_0_"
    class="_button_1nw83_8 _has-icon_1nw83_60 _icon-only_1nw83_53"
    data-kind="primary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="24"
      viewBox="0 0 256 256"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM80,108a12,12,0,1,1,12,12A12,12,0,0,1,80,108Zm96,0a12,12,0,1,1-12-12A12,12,0,0,1,176,108Zm-1.07,48c-10.29,17.79-27.4,28-46.93,28s-36.63-10.2-46.92-28a8,8,0,1,1,13.84-8c7.47,12.91,19.21,20,33.08,20s25.61-7.1,33.07-20a8,8,0,0,1,13.86,8Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Can raise hand 1`] = `
<div>
  <button
    aria-disabled="false"
    aria-expanded="false"
    aria-haspopup="true"
    aria-labelledby="_r_1j_"
    class="_button_1nw83_8 _raisedButton_fb25ab _has-icon_1nw83_60 _icon-only_1nw83_53"
    data-kind="primary"
    data-size="lg"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="24"
      viewBox="0 0 256 256"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M188,88a27.75,27.75,0,0,0-12,2.71V60a28,28,0,0,0-41.36-24.6A28,28,0,0,0,80,44v6.71A27.75,27.75,0,0,0,68,48,28,28,0,0,0,40,76v76a88,88,0,0,0,176,0V116A28,28,0,0,0,188,88Zm12,64a72,72,0,0,1-144,0V76a12,12,0,0,1,24,0v44a8,8,0,0,0,16,0V44a12,12,0,0,1,24,0v68a8,8,0,0,0,16,0V60a12,12,0,0,1,24,0v68.67A48.08,48.08,0,0,0,120,176a8,8,0,0,0,16,0,32,32,0,0,1,32-32,8,8,0,0,0,8-8V116a12,12,0,0,1,24,0Z"
      />
    </svg>
  </button>
</div>
`;
